finish first project from chapter 13

--- a/13/Persistence/Persistence/Base.lproj/Main.storyboard
+++ b/13/Persistence/Persistence/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Persistence" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,95 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="InH-7x-JST">
+                                <rect key="frame" x="81" y="28" width="499" height="30"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Line 1 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NOp-VS-Hou">
+                                <rect key="frame" x="20" y="31" width="53" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pw5-Wi-ASi">
+                                <rect key="frame" x="81" y="104" width="499" height="30"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Line 3 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jVj-kY-OLl">
+                                <rect key="frame" x="17" y="107" width="56" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IHg-RR-9ZJ">
+                                <rect key="frame" x="81" y="66" width="499" height="30"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Line 2 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LsW-Vo-Jsz">
+                                <rect key="frame" x="17" y="69" width="56" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Line 4 :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wuO-h0-NHj">
+                                <rect key="frame" x="17" y="145" width="56" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E9r-8Q-cvb">
+                                <rect key="frame" x="81" y="142" width="499" height="30"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="jVj-kY-OLl" firstAttribute="leading" secondItem="wuO-h0-NHj" secondAttribute="leading" id="1vj-xE-ch1"/>
+                            <constraint firstItem="E9r-8Q-cvb" firstAttribute="trailing" secondItem="pw5-Wi-ASi" secondAttribute="trailing" id="2ID-5E-9bJ"/>
+                            <constraint firstItem="E9r-8Q-cvb" firstAttribute="top" secondItem="pw5-Wi-ASi" secondAttribute="bottom" constant="8" symbolic="YES" id="Ed6-9L-VxZ"/>
+                            <constraint firstItem="NOp-VS-Hou" firstAttribute="baseline" secondItem="InH-7x-JST" secondAttribute="baseline" id="Exg-Rf-Yqd"/>
+                            <constraint firstItem="jVj-kY-OLl" firstAttribute="leading" secondItem="LsW-Vo-Jsz" secondAttribute="leading" id="Gdt-t0-smr"/>
+                            <constraint firstItem="IHg-RR-9ZJ" firstAttribute="leading" secondItem="InH-7x-JST" secondAttribute="leading" id="H6Z-8n-O2a"/>
+                            <constraint firstItem="InH-7x-JST" firstAttribute="leading" secondItem="NOp-VS-Hou" secondAttribute="trailing" constant="8" symbolic="YES" id="Lwz-Jq-8w8"/>
+                            <constraint firstItem="pw5-Wi-ASi" firstAttribute="leading" secondItem="E9r-8Q-cvb" secondAttribute="leading" id="Q5M-z7-vOL"/>
+                            <constraint firstItem="pw5-Wi-ASi" firstAttribute="top" secondItem="IHg-RR-9ZJ" secondAttribute="bottom" constant="8" symbolic="YES" id="TjV-Pd-QkV"/>
+                            <constraint firstItem="NOp-VS-Hou" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="Xcy-pm-zVv"/>
+                            <constraint firstItem="jVj-kY-OLl" firstAttribute="baseline" secondItem="pw5-Wi-ASi" secondAttribute="baseline" id="aev-Mn-du5"/>
+                            <constraint firstItem="IHg-RR-9ZJ" firstAttribute="baseline" secondItem="LsW-Vo-Jsz" secondAttribute="baseline" id="cWk-sJ-uDo"/>
+                            <constraint firstItem="IHg-RR-9ZJ" firstAttribute="leading" secondItem="pw5-Wi-ASi" secondAttribute="leading" id="dVw-Ad-hnV"/>
+                            <constraint firstItem="IHg-RR-9ZJ" firstAttribute="top" secondItem="InH-7x-JST" secondAttribute="bottom" constant="8" symbolic="YES" id="fbh-tx-dAR"/>
+                            <constraint firstItem="InH-7x-JST" firstAttribute="trailing" secondItem="IHg-RR-9ZJ" secondAttribute="trailing" id="mU4-gY-2hX"/>
+                            <constraint firstItem="IHg-RR-9ZJ" firstAttribute="trailing" secondItem="pw5-Wi-ASi" secondAttribute="trailing" id="nvu-Tx-aRT"/>
+                            <constraint firstItem="E9r-8Q-cvb" firstAttribute="baseline" secondItem="wuO-h0-NHj" secondAttribute="baseline" id="qV2-Dd-QeR"/>
+                            <constraint firstItem="InH-7x-JST" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="rHh-zx-n88"/>
+                            <constraint firstItem="IHg-RR-9ZJ" firstAttribute="leading" secondItem="LsW-Vo-Jsz" secondAttribute="trailing" constant="8" symbolic="YES" id="rNX-Gu-SCp"/>
+                            <constraint firstItem="InH-7x-JST" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="tYL-ez-hBJ"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outletCollection property="lineFields" destination="InH-7x-JST" collectionClass="NSMutableArray" id="Z7b-81-Wu3"/>
+                        <outletCollection property="lineFields" destination="IHg-RR-9ZJ" collectionClass="NSMutableArray" id="xB8-f1-7Q5"/>
+                        <outletCollection property="lineFields" destination="pw5-Wi-ASi" collectionClass="NSMutableArray" id="2tk-KJ-5OK"/>
+                        <outletCollection property="lineFields" destination="E9r-8Q-cvb" collectionClass="NSMutableArray" id="dSR-e0-utB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="288" y="291"/>
         </scene>
     </scenes>
 </document>
